syntax = "proto3";
package protobuf.http;
message CreateUserGroupC{
	string hOpCode=1;
	string userGroupName=2;
	string userGroupParentId=3;//空或""为顶级
}
message CreateUserGroupS{
	string hOpCode=1;
	UserGroupData userGroup=2;
}
message UpdateUserGroupC{
	string hOpCode=1;
	string userGroupId=2;
	string userGroupName=3;//空或""为不修改名字
	bool isUpdateUserGroupParent=4;//true修改，false不修改
	string userGroupParentId=5;//空或""为顶级（在是true的状态下）
	int32 userGroupState=6;//1：可用2：不可用3：逻辑删除，其他为不修改
}
message UpdateUserGroupS{
	string hOpCode=1;
	UserGroupData userGroup=2;
}
message GetUserGroupC{
	string hOpCode=1;
	string userGroupId=2;
}
message GetUserGroupS{
	string hOpCode=1;
	UserGroupData userGroup=2;
}
message DeleteUserGroupC{
	string hOpCode=1;
	string userGroupId=2;
}
message DeleteUserGroupS{
	string hOpCode=1;
}
message GetUserGroupListC{
	string hOpCode=1;
	string userGroupParentId=2;//空或""为获取所有顶级
	bool isUserGroupParentIsNull=3;
	bool isRecursion=4;//是否递归
	string userGroupTopId=5;
	int32 userGroupState=6;
	int32 currentPage=7;
	int32 pageSize=8;//pageSize传0，说明不分页
	string userGroupCreateTimeGreaterThan=9;//创建时间大于等于某个时间段（yyyy-MM-dd HH:mm:ss）
	string userGroupCreateTimeLessThan=10;//创建时间小于等于某个时间段（yyyy-MM-dd HH:mm:ss）
	string userGroupUpdateTimeGreaterThan=11; //更新时间大于等个某个时间段
	string userGroupUpdateTimeLessThan=12;    //更新时间小于等个某个时间段
}
message GetUserGroupListS{
	string hOpCode=1;
	repeated UserGroupData userGroup=2;
	int32 currentPage=3;
	int32 pageSize=4;//pageSize传0，说明不分页
	int32 totalPage=5;//总页数
	int32 allNum=6;//总条数
}
message CreateUserC{
	string hOpCode=1;
	string userName=2;
	string userPassword=3;
	string userPhone=4;
	string userEmail=5;
	string userGroupId=6;
	string userRealName=7;
	int32 userSex=8;
	int32 userAge=9;
	int32 userRole=10;//传0,1是普通成员，2是组管理员
}
message CreateUserS{
	string hOpCode=1;
	UserData user=2;
}
message GetUserC{
	string hOpCode=1;
	string userId=2;//传空就是查看自己的
}
message GetUserS{
	string hOpCode=1;
	UserData user=2;
}
message GetUserByEmailC{
	string hOpCode=1;
	string userEmail=2;
}
message GetUserByEmailS{
	string hOpCode=1;
	UserData user=2;
}
message UpdateUserC{
	string hOpCode=1;
	string userId=2;
	string userPassword=3;
	string userPhone=4;
	string userEmail=5;
	int32 userState=6;//1：可用2：不可用3：逻辑删除，其他为不修改
	bool isUpdateUserGroup=7;//true修改，false不修改
	string userGroupId=8;//空或""为顶级（在是true的状态下）
	string userRealName=9;
	int32 userSex=10;//1：女2：男
	int32 userAge=11;
	int32 userRole=12;//传0是不修改，传1或2是修改
}
message UpdateUserS{
	string hOpCode=1;
	UserData user=2;
}
message GetUserListC{
	string hOpCode=1;
	string userGroupId=2;//存在时userGroupTopId没意义
	bool isUserGroupIsNull=3;//是不是查用户组为空的用户
	bool isRecursion=4;//是否递归获取组下树的所有人员
	int32 userState=5;
	int32 userSex=6;//1：女2：男
	int32 userRole=7;//1：普通用户2：组管理员
	string userGroupTopId=8;
	string userName=9;//用户名模糊搜索
	string userCreateTimeGreaterThan=10;//大于等于某个时间段（yyyy-MM-dd HH:mm:ss）
	string userCreateTimeLessThan=11;//小于等于某个时间段（yyyy-MM-dd HH:mm:ss）
	string userUpdateTimeGreaterThan=12; //
	string userUpdateTimeLessThan=13;
	int32 currentPage=14;
	int32 pageSize=15;//pageSize传0，说明不分页
}
message GetUserListS{
	string hOpCode=1;
	repeated UserData user=2;
	int32 currentPage=3;
	int32 pageSize=4;//pageSize传0，说明不分页
	int32 totalPage=5;//总页数
	int32 allNum=6;//总条数
}
message GetTokenC{
	string hOpCode=1;
	string userName=2;
	string userPassword=3;
}
message GetTokenS{
	string hOpCode=1;
	string tokenId=2;
	string tokenExpireTime=3;
	UserData user=4;
}
message UpdateTokenC{
	string hOpCode=1;
}
message UpdateTokenS{
	string hOpCode=1;
	string tokenId=2;
	string tokenExpireTime=3;
	UserData user=4;
}
message DeleteTokenC{
	string hOpCode=1;
}
message DeleteTokenS{
	string hOpCode=1;
}
message GetUserImgC{
	string hOpCode=1;
	string userId=2;//传空就是查看自己的
}
message CheckUserByUserNameC{
	string hOpCode=1;
	string userName=2;
}
message CheckUserByUserNameS{
	string hOpCode=1;
	bool exist=2;//true存在，false不存在
}
message UserData{
	string userId=1;
	string userName=2;
	string userPhone=3;
	string userEmail=4;
	string userCreateTime=5;
	string userUpdateTime=6;
	int32 userState=7;
	string userGroupId=8;
	string userRealName=9;
	int32 userSex=10;
	int32 userAge=11;
	string userGroupTopId=12;
	int32 userRole=13;
	string userImg=14;
	string userImgUrl=15;
}
message UserGroupData{
	string userGroupId=1;
	string userGroupName=2;
	string userGroupParentId=3;
	string userGroupCreateTime=4;
	string userGroupUpdateTime=5;
	int32 userGroupState=6;
	string userGroupTopId=7;
}
message CheckUserPhoneC{
	string hOpCode=1;
	string userPhone=2;
}
message CheckUserPhoneS{
	string hOpCode=1;
	bool exist=2;  //true存在，false不存在
}